--- a/index.html
+++ b/index.html
@@ -521,10 +521,10 @@
                             class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300"
                     >
                         <div class="flex">
-                            <div class="w-1/4">
+                            <div class="w-1/4 sm:w-1/3">
                                 <img
                                         alt="在家档案活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-24 sm:h-20 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/6939f04942d2c0a6843b43ee688373f6.png"
                                 />
                             </div>
@@ -2164,7 +2164,7 @@
         // AI智能体点击事件
         aiAgent.addEventListener('click', function () {
             // 跳转到AI智能体界面
-            window.location.href = 'javascript:void(0);';
+            window.location.href = 'aichat.html';
             alert('跳转到AI智能体界面');
         });
 
