--- a/index.html
+++ b/index.html
@@ -521,10 +521,10 @@
                             class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300"
                     >
                         <div class="flex">
-                            <div class="w-1/4 sm:w-1/3">
+                            <div class="w-1/4">
                                 <img
                                         alt="在家档案活动"
-                                        class="w-full h-24 sm:h-20 object-cover"
+                                        class="w-full h-32 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/6939f04942d2c0a6843b43ee688373f6.png"
                                 />
                             </div>
@@ -628,7 +628,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="咖啡与畅聊活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-32 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/332d28928abbae49baf4eb8cca1be541.png"
                                 />
                             </div>
@@ -758,7 +758,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="清凉一夏活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-32 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/851b09093b0ee0266916258881a0830e.png"
                                 />
                             </div>
@@ -800,7 +800,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="写生模特绘画工作坊"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-32 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/f5c733a446f988b2606ee42f4e4c5876.png"
                                 />
                             </div>
@@ -860,27 +860,21 @@
                         </div>
                         <!-- 今日活动列表 -->
                         <div class="space-y-3">
-                            <div
-                                    class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300"
-                            >
+                            <!-- 第一个活动卡片 -->
+                            <div class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300">
                                 <div class="flex">
-                                    <div class="w-1/4">
+                                    <!-- 统一的图片容器样式 -->
+                                    <div class="w-1/4 min-h-[120px] flex items-center justify-center overflow-hidden">
                                         <img
                                                 alt="在家档案活动"
-                                                class="w-full h-full object-cover"
+                                                class="w-full h-32 object-cover"
                                                 src="https://design.gemcoder.com/staticResource/echoAiSystemImages/6939f04942d2c0a6843b43ee688373f6.png"
                                         />
                                     </div>
                                     <div class="w-3/4 p-4">
                                         <div class="flex justify-between items-start mb-2">
-                          <span class="text-xs font-medium text-primary">
-                            10:30
-                          </span>
-                                            <span
-                                                    class="text-xs bg-gray-100 text-gray-600 px-2 py-1 rounded-full"
-                                            >
-                            南昌市
-                          </span>
+                                            <span class="text-xs font-medium text-primary">10:30</span>
+                                            <span class="text-xs bg-gray-100 text-gray-600 px-2 py-1 rounded-full">南昌市</span>
                                         </div>
                                         <h3 class="font-medium text-dark mb-2 line-clamp-2">
                                             在家档案：用档案方法保护时尚与珠宝
@@ -894,34 +888,27 @@
                                                 />
                                                 <span class="text-xs text-gray-500"> 王阿姨 </span>
                                             </div>
-                                            <button class="text-primary text-sm font-medium">
-                                                报名
-                                            </button>
+                                            <button class="text-primary text-sm font-medium">报名</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div
-                                    class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300"
-                            >
+
+                            <!-- 第二个活动卡片 -->
+                            <div class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300">
                                 <div class="flex">
-                                    <div class="w-1/4">
+                                    <!-- 与第一个卡片完全相同的图片容器样式 -->
+                                    <div class="w-1/4 min-h-[120px] flex items-center justify-center overflow-hidden">
                                         <img
                                                 alt="咖啡与畅聊活动"
-                                                class="w-full h-full object-cover"
+                                                class="w-full h-32 object-cover"
                                                 src="https://design.gemcoder.com/staticResource/echoAiSystemImages/332d28928abbae49baf4eb8cca1be541.png"
                                         />
                                     </div>
                                     <div class="w-3/4 p-4">
                                         <div class="flex justify-between items-start mb-2">
-                          <span class="text-xs font-medium text-primary">
-                            11:00
-                          </span>
-                                            <span
-                                                    class="text-xs bg-gray-100 text-gray-600 px-2 py-1 rounded-full"
-                                            >
-                            南昌市
-                          </span>
+                                            <span class="text-xs font-medium text-primary">11:00</span>
+                                            <span class="text-xs bg-gray-100 text-gray-600 px-2 py-1 rounded-full">南昌市</span>
                                         </div>
                                         <h3 class="font-medium text-dark mb-2 line-clamp-2">
                                             咖啡与畅聊
@@ -935,9 +922,77 @@
                                                 />
                                                 <span class="text-xs text-gray-500"> 王阿姨 </span>
                                             </div>
-                                            <button class="text-primary text-sm font-medium">
-                                                报名
-                                            </button>
+                                            <button class="text-primary text-sm font-medium">报名</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="space-y-3">
+                                <!-- 第一个活动卡片 -->
+                                <div class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300">
+                                    <div class="flex">
+                                        <!-- 统一的图片容器样式 -->
+                                        <div class="w-1/4 min-h-[120px] flex items-center justify-center overflow-hidden">
+                                            <img
+                                                    alt="在家档案活动"
+                                                    class="w-full h-32 object-cover"
+                                                    src="https://design.gemcoder.com/staticResource/echoAiSystemImages/6939f04942d2c0a6843b43ee688373f6.png"
+                                            />
+                                        </div>
+                                        <div class="w-3/4 p-4">
+                                            <div class="flex justify-between items-start mb-2">
+                                                <span class="text-xs font-medium text-primary">10:30</span>
+                                                <span class="text-xs bg-gray-100 text-gray-600 px-2 py-1 rounded-full">南昌市</span>
+                                            </div>
+                                            <h3 class="font-medium text-dark mb-2 line-clamp-2">
+                                                在家档案：用档案方法保护时尚与珠宝
+                                            </h3>
+                                            <div class="flex items-center justify-between">
+                                                <div class="flex items-center">
+                                                    <img
+                                                            alt="王阿姨头像"
+                                                            class="w-6 h-6 rounded-full object-cover mr-2"
+                                                            src="https://design.gemcoder.com/staticResource/echoAiSystemImages/bb13f2be2a1dab039d0d214459f8f566.png"
+                                                    />
+                                                    <span class="text-xs text-gray-500"> 王阿姨 </span>
+                                                </div>
+                                                <button class="text-primary text-sm font-medium">报名</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- 第二个活动卡片 -->
+                                <div class="bg-white rounded-xl shadow-sm overflow-hidden transition-transform hover:shadow-md hover:-translate-y-1 duration-300">
+                                    <div class="flex">
+                                        <!-- 与第一个卡片完全相同的图片容器样式 -->
+                                        <div class="w-1/4 min-h-[120px] flex items-center justify-center overflow-hidden">
+                                            <img
+                                                    alt="咖啡与畅聊活动"
+                                                    class="w-full h-32 object-cover"
+                                                    src="https://design.gemcoder.com/staticResource/echoAiSystemImages/332d28928abbae49baf4eb8cca1be541.png"
+                                            />
+                                        </div>
+                                        <div class="w-3/4 p-4">
+                                            <div class="flex justify-between items-start mb-2">
+                                                <span class="text-xs font-medium text-primary">11:00</span>
+                                                <span class="text-xs bg-gray-100 text-gray-600 px-2 py-1 rounded-full">南昌市</span>
+                                            </div>
+                                            <h3 class="font-medium text-dark mb-2 line-clamp-2">
+                                                咖啡与畅聊
+                                            </h3>
+                                            <div class="flex items-center justify-between">
+                                                <div class="flex items-center">
+                                                    <img
+                                                            alt="王阿姨头像"
+                                                            class="w-6 h-6 rounded-full object-cover mr-2"
+                                                            src="https://design.gemcoder.com/staticResource/echoAiSystemImages/bb13f2be2a1dab039d0d214459f8f566.png"
+                                                    />
+                                                    <span class="text-xs text-gray-500"> 王阿姨 </span>
+                                                </div>
+                                                <button class="text-primary text-sm font-medium">报名</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -962,7 +1017,7 @@
                                     <div class="w-1/4">
                                         <img
                                                 alt="清凉一夏活动"
-                                                class="w-full h-full object-cover"
+                                                class="w-full h-32 object-cover"
                                                 src="https://design.gemcoder.com/staticResource/echoAiSystemImages/851b09093b0ee0266916258881a0830e.png"
                                         />
                                     </div>
@@ -1003,7 +1058,7 @@
                                     <div class="w-1/4">
                                         <img
                                                 alt="写生模特绘画工作坊"
-                                                class="w-full h-full object-cover"
+                                                class="w-full h-32 object-cover"
                                                 src="https://design.gemcoder.com/staticResource/echoAiSystemImages/f5c733a446f988b2606ee42f4e4c5876.png"
                                         />
                                     </div>
@@ -1059,7 +1114,7 @@
                                     <div class="w-1/4">
                                         <img
                                                 alt="太极拳入门"
-                                                class="w-full h-full object-cover"
+                                                class="w-full h-32 object-cover"
                                                 src="https://design.gemcoder.com/staticResource/echoAiSystemImages/be6bf98f793bcdba7424de060a608100.png"
                                         />
                                     </div>
