apply.html phone web compatible

--- a/apply.html
+++ b/apply.html
@@ -189,7 +189,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="书法入门班活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/c6428384fa0ae356e39608e6a179e4a4.png"
                                 />
                             </div>
@@ -256,7 +256,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="茶艺品鉴会活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/452ce9cac9285fa8f25169af27834bcc.png"
                                 />
                             </div>
@@ -323,7 +323,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="健康养生讲座活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/e7ba4821963550aef7b932284d87da77.png"
                                 />
                             </div>
@@ -418,7 +418,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="夏季健康讲座活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/7dd16bbde6cf506a82c4aba191c2ef03.png"
                                 />
                             </div>
@@ -486,7 +486,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="手工编织班活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/1f42b5db43d2de192b415e7361e95d4b.png"
                                 />
                             </div>
@@ -554,7 +554,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="智能手机使用培训活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/4406c59e820726b150d88ae914d00592.png"
                                 />
                             </div>
@@ -622,7 +622,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="书法展览参观活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/d47765cfa5ad8b538fb30fc20dd32475.png"
                                 />
                             </div>
@@ -721,7 +721,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="国画入门班活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/8bd1e830d88cf77ed4d6cdc56b8502b2.png"
                                 />
                             </div>
@@ -784,7 +784,7 @@
                             <div class="w-1/4">
                                 <img
                                         alt="古典音乐欣赏会活动"
-                                        class="w-full h-full object-cover"
+                                        class="w-full h-40 object-cover"
                                         src="https://design.gemcoder.com/staticResource/echoAiSystemImages/4295ac0f7ed3fe958131f5b07873b34e.png"
                                 />
                             </div>
