--- a/myself.html
+++ b/myself.html
@@ -708,7 +708,7 @@
     </a>
     <a
             class="flex flex-col items-center text-gray-500"
-            href="apply.html;"
+            href="apply.html"
             target="_top"
             is-page="true"
             is-add="false"
